Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27452

QSettings Windows Platform-specific notes does not match behavior

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 4.8.4, 5.0.0 Beta 2
    • 4.7.0, 4.8.3, 5.0.0 RC 1
    • Core: Other
    • None
    • ee2e497f1c8216a22ddea53ab5ae1fd09bfee363

      In the QSettings Platform-specific notes (http://qt-project.org/doc/qt-5.0/qsettings.html#platform-specific-notes) the documentation for the windows NativeFormat claims that that the organization keys will be found in HKEY_CURRENT_USER\Software\MySoft and HKEY_LOCAL_MACHINE\Software\MySoft. The actual behavior will look for the keys in HKEY_CURRENT_USER\Software\MySoft\OrganizationDefaults and HKEY_LOCAL_MACHINE\Software\MySoft\OrganizationDefaults. See the constructor for QWinSettingsPrivate in qsettings_win.cpp for where “OrganizationDefaults” is appended to the key path. The documentation should be updated to reflect the behavior.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            correa Thiago Augusto Correa
            rastaban Phil Christensen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes